--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -24,24 +24,30 @@
 %
 %
 \TitlePage{
-  \centerline{\titlefont Share Package}\medskip
+  \centerline{\titlefont ACE}\medskip
   \centerline{\titlefont ---}\medskip
-  \centerline{\titlefont ACE}\vfill
+  \centerline{\titlefont A GAP4 Share Package}\bigskip\bigskip
+  \centerline{\secfont Version 3.0}
+  \vfill
   \centerline{\secfont by}\vfill
-  \centerline{\secfont George Havas and Colin Ramsay,}\medskip
-  \centerline{Centre for Discrete Mathematics and Computing,} \medskip
-  \centerline{Department of Computer Science and Electrical Engineering,}
-  \medskip
-  \centerline{The University of Queensland, St.~Lucia 4072, Australia}\vfill
-  \centerline{{\GAP} interface by Alexander Hulpke,}\medskip
-  \centerline{Department of Mathematics,}\medskip
-  \centerline{Ohio State University, 231 West 18th Avenue, Columbus,
-              Ohio, 43202 USA}\medskip
-  \centerline{and Greg Gamble,}\medskip
-  \centerline{Centre for Discrete Mathematics and Computing,} \medskip
-  \centerline{Department of Computer Science and Electrical Engineering,}
-  \medskip
+  \centerline{\secfont George Havas and Colin Ramsay}\medskip
+  \centerline{Centre for Discrete Mathematics and Computing}\medskip
+  \centerline{Department of Computer Science and Electrical Engineering}\medskip
   \centerline{The University of Queensland, St.~Lucia 4072, Australia}
+  \bigskip
+  \centerline{{\GAP} interface code by}\medskip
+  \centerline{\secfont Alexander Hulpke}\medskip
+  \centerline{Department of Mathematics, Ohio State University}\medskip
+  \centerline{231 West 18th Avenue, Columbus, Ohio, 43202 USA}\medskip
+  \centerline{and}\medskip
+  \centerline{\secfont Greg Gamble}\medskip
+  \centerline{Centre for Discrete Mathematics and Computing} \medskip
+  \centerline{Department of Computer Science and Electrical Engineering}
+  \medskip
+  \centerline{The University of Queensland, St.~Lucia 4072, Australia}\medskip
+  \centerline{\secfont email: gregg@csee.uq.edu.au}
+  \vfill
+  \centerline{\secfont March 2001}
 }
 %
 %
