--- a/doc/otheroptions.tex
+++ b/doc/otheroptions.tex
@@ -316,7 +316,7 @@ This option attempts upto <attempts> (or,  in  the  first  and  second
 forms, 8) times to find nontrivial subgroups with index a multiple  of
 <val> by repeatedly making random coset numbers coincident with  coset
 1 and seeing what happens. The starting coset table must be non-empty,
-but need not be complete. For each attempt, we repeatedly  add  random
+but should not be complete. For each attempt, we repeatedly add random
 coset representatives to the subgroup and `redo' the  enumeration.  If
 the table becomes too small, the  attempt  is  aborted,  the  original
 subgroup generators restored, and another attempt made. If an  attempt
